--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,36 +16,31 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildToolsVersion '27.0.0'
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-/*  Core Android libraries*/
-    implementation 'com.android.support:appcompat-v7:27.0.1'
-    implementation 'com.android.support:support-v4:27.0.1'
-    implementation 'com.android.support:recyclerview-v7:27.0.1'
-    implementation 'com.android.support:support-media-compat:27.0.1'
-    implementation 'com.android.support:design:27.0.1'
-
-/* Firebase */
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    /*  Core Android libraries*/
+    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:support-v4:27.0.2'
+    implementation 'com.android.support:recyclerview-v7:27.0.2'
+    implementation 'com.android.support:cardview-v7:27.0.2'
+    implementation 'com.android.support:support-media-compat:27.0.2'
+    implementation 'com.android.support:design:27.0.2'
+    /* Firebase */
     implementation 'com.google.firebase:firebase-appindexing:11.6.2'
-
-/* Application testing libraries */
+    /* Application testing libraries */
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-
-/* ExoPlayer */
+    /* ExoPlayer */
     compile 'com.google.android.exoplayer:exoplayer:r2.5.0'
-
-/* Butterknife */
+    /* Butterknife */
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
-/* Timber */
+    /* Timber */
     implementation 'com.jakewharton.timber:timber:4.6.0'
-
 }
 
 
