--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.0.2'
     implementation 'com.android.support:support-media-compat:27.0.2'
     implementation 'com.android.support:design:27.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     /* Firebase */
     implementation 'com.google.firebase:firebase-appindexing:11.6.2'
     /* Application testing libraries */
