--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     androidTestCompile 'com.android.support.test.espresso:espresso-contrib:3.0.1'
     androidTestImplementation 'com.android.support:support-annotations:27.0.2'
-
+    /* Picasso */
+    compile 'com.squareup.picasso:picasso:2.5.2'
     /* ExoPlayer */
     compile 'com.google.android.exoplayer:exoplayer:r2.5.0'
     /* Butterknife */
